<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<LinearLayout
		android:id="@+id/below_linear_layout"
		android:layout_alignParentBottom="true"
		android:layout_width="fill_parent"
		android:background="@drawable/gw_utility_bottom_label_background_color"
		android:gravity="center_vertical"	
		android:layout_height="55dip" >
	
		<Button
			android:id="@+id/confirm_button"
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:layout_margin="5dp"
			android:text="@string/okButton"
			android:background="@drawable/custom_button" />
		
		<Button
			android:id="@+id/cancel_button"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="fill_parent"
			android:layout_margin="5dp"
			android:text="@string/cancelButton"
			android:background="@drawable/custom_button" />
	</LinearLayout>
	
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_above="@id/below_linear_layout" 
		android:layout_alignParentTop="true" >
		<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
			<RelativeLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" >

				<TextView
					android:id="@+id/host_tv"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/host" />
				
				<EditText
					android:id="@+id/host_et"
					android:layout_below="@id/host_tv"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:hint="@string/host_hint" />

				<TextView
					android:id="@+id/port_tv"
					android:layout_below="@id/host_et"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/port" />
					
				<EditText
					android:id="@+id/port_et"
					android:layout_below="@id/port_tv"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:hint="@string/port_hint" 
					android:inputType="number"/>

				<TextView
					android:id="@+id/quiz_tv"
					android:layout_below="@id/port_et"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/quiz" />
				
				<EditText
					android:id="@+id/quiz_et"
					android:layout_below="@id/quiz_tv"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:hint="@string/target_hint" />

				<TextView
					android:id="@+id/demo_roche_tv"
					android:layout_below="@id/quiz_et"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/demoRoche" />

				<Switch
					android:id="@+id/demo_roche_sw"
					android:layout_below="@id/demo_roche_tv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/on_off" />

				<TextView
					android:id="@+id/reset_bt_addr_tv"
					android:layout_below="@id/demo_roche_sw"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/reset_bt_addr" />

				<Switch
					android:id="@+id/reset_bt_addr_sw"
					android:layout_below="@id/reset_bt_addr_tv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/on_off" />

			</RelativeLayout>
		</ScrollView>
	</RelativeLayout>
</RelativeLayout>