<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	  
	<group android:id="@+id/pair_group">
        <item android:id="@+id/pair"
            android:icon="@drawable/ic_menu_bluetooth_pairing"
          	android:title="@string/pair" 
          	android:textSize="15sp">          
    	</item> 
    </group>
    <group android:id="@+id/new_device_group">
        <item android:id="@+id/new_device"
            android:icon="@drawable/ic_menu_bluetooth_pairing"
          	android:title="@string/bgw_pair" 
          	android:textSize="15sp">          
    	</item>     	
    </group>
    <group android:id="@+id/select_model_group">
    	<item android:id="@+id/select_model"
    	    android:icon="@drawable/ic_menu_device_collections_list"
          	android:title="@string/select_model" 
          	android:textSize="15sp">
        </item>
    </group>
    
    <group android:id="@+id/config_group1" android:visible="false">
		<item android:id="@+id/reliability_menu" 
		    android:icon="@drawable/ic_menu_signal_quality"
		    android:title="@string/reliability"
			android:textSize="15sp" android:visible="false">
		</item>

		<item android:id="@+id/config" 
		    android:icon="@drawable/ic_menu_configure"
		    android:title="@string/config"
			android:textSize="15sp" 
			android:visible="false">
		</item>			
	</group>
	
	 <group android:id="@+id/show_measure_group">    	
        <item android:id="@+id/show_measure"
            android:icon="@drawable/ic_menu_archive_light"
          	android:title="@string/show_measure" 
          	android:textSize="15sp">
        </item> 
    </group>
	
	<group android:id="@+id/config_group2" android:visible="false">
		<item android:id="@+id/new_device_adv"
		    android:icon="@drawable/ic_menu_bluetooth_pairing"
          	android:title="@string/bgw_pair" 
          	android:textSize="15sp">          
    	</item> 
	
		<item android:id="@+id/advance_options"
		    android:icon="@drawable/ic_menu_settings_light"
          	android:title="@string/advance_options" 
          	android:textSize="15sp">
        </item> 
     </group>
     
	<group android:id="@+id/config_group3" android:visible="false">
		
		<item android:id="@+id/zephyr_config"
		  android:icon="@drawable/ic_menu_configure"
          android:title="@string/config" 
          android:textSize="15sp">
        </item> 
     </group>
     
    
     
</menu>
