<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:background="@color/gw_gray_dialog"
	android:padding="5dp" >
		<TextView
            android:id="@+id/passwordLbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp" />
		<EditText
            android:id="@+id/password"
            android:layout_below="@id/passwordLbl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword" />
		<TextView
			android:id="@+id/newPasswordLbl1"
			android:layout_below="@id/password"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/newPassword"
			android:textSize="20sp" />
		<EditText
			android:id="@+id/newPassword1"
			android:layout_below="@id/newPasswordLbl1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:maxLines="1"
			android:inputType="textPassword" />
        <TextView
            android:id="@+id/newPasswordLbl2"
            android:layout_below="@id/newPassword1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/newPasswordConfirm"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/newPassword2"
            android:layout_below="@id/newPasswordLbl2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword" />
		<CheckBox 
		    android:id="@+id/passwordCheckBox"
		    android:layout_below="@id/newPassword2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/passwordCBLabel"
		    android:checked="false"/>
		        
</RelativeLayout>
