<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<LinearLayout
		android:id="@+id/below_linear_layout"
		android:layout_alignParentBottom="true"
		android:layout_width="fill_parent"
		android:background="@drawable/gw_utility_bottom_label_background_color"
		android:gravity="center_vertical"	
		android:layout_height="55dip" >
	
		<Button
			android:id="@+id/confirm_button"
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:layout_margin="5dp"
			android:text="@string/okButton"
			android:background="@drawable/custom_button" />
		
		<Button
			android:id="@+id/cancel_button"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="fill_parent"
			android:layout_margin="5dp"
			android:text="@string/cancelButton"
			android:background="@drawable/custom_button" />
	</LinearLayout>
	
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true">
		<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<RelativeLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center" >

				<LinearLayout
					android:id="@+id/autoLoginRL"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:minHeight="70dip"
					android:orientation="horizontal">

					<TextView
						android:id="@+id/autoLoginTV"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:layout_gravity="center"
						android:textSize="22sp"
						android:textColor="@color/gw_black"
						android:layout_marginLeft="10dip"
						android:text="@string/auto_login" />

					<CheckBox
						android:id="@+id/autoLoginCB"
						android:layout_width="wrap_content"
						android:layout_gravity="center"
						android:layout_marginRight="10dip"
						android:layout_height="wrap_content"/>
				</LinearLayout>

				<View
					android:id="@+id/line"
					android:layout_below="@id/autoLoginRL"
					android:layout_width="fill_parent"
					android:layout_height="1dip"
					android:background="@color/gw_blue_gray" />

				<View
					android:id="@+id/line1"
					android:layout_width="fill_parent"
					android:layout_height="1dip"
					android:layout_above="@id/autoLoginRL"
					android:background="@color/gw_blue_gray" />

			</RelativeLayout>
		</ScrollView>
	</RelativeLayout>
</RelativeLayout>